--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-final-sass",
+  "name": "Proyecto-en-git",
   "version": "1.0.0",
   "description": "SOBRE MI:",
   "main": "index.js",
@@ -9,6 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
-
+  "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.77.2"
+  }
 }
