--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "Proyecto-en-git",
+  "name": "proyecto-coderhouse",
   "version": "1.0.0",
   "description": "SOBRE MI:",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:sass": "sass sass/styles.scss css/styles.css"
